fix: reduce cover image height on smaller screens

--- a/website/src/pages/ReservedArea/Institutions/View/index.less
+++ b/website/src/pages/ReservedArea/Institutions/View/index.less
@@ -108,12 +108,18 @@
   }
 }
 
+@media (max-width: 992px) {
+  .institution-view .cover-image {
+    height: 200px;
+  }
+}
+
 @media (max-width: 768px) {
   .institution-view {
     padding: 16px;
 
     .cover-image {
-      height: 180px;
+      height: 140px;
     }
 
     .content-wrapper {
